fixed some layering issues involving z-index and added mobile ready tutorial

--- a/style.css
+++ b/style.css
@@ -87,6 +87,9 @@ body{
     background-repeat:no-repeat;
     background-size:70% 85%;
 }
+.imageSlidesButton{
+    z-index:117;
+}
 .unMuteInGame{
     position:fixed;
     display:flex;
@@ -220,10 +223,45 @@ body{
     background-size:100% 100%;
     border: 4px solid white;
 }
+.howToPlayMobile{
+    display:none;
+}
+.imageSlides{
+    position:absolute;
+    width:325px;
+    height:370px;
+}
+.displayLeft{
+    position:absolute;
+    left:0%;
+}
+.displayRight{
+    position:absolute;
+    right:0%;
+    z-index:200;
+}
+.displayNoneClass{
+    display:none;
+}
+
 .tutorial{
     cursor:pointer;
 }
-.exitAbout{
+.exitButton{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    position:fixed;
+    width:5%;
+    height:5%;
+    top:0;
+    right:0;
+    background-color:white;
+    color:black;
+    font-size:40px;
+    cursor:pointer;
+}
+.exitMobileCardInfo{
     display:flex;
     justify-content:center;
     align-items:center;
@@ -635,7 +673,6 @@ body{
         opacity: 1;
         -webkit-transform: scale(1.2, 1.2);
         transform: scale(1.2, 1.2);
-
     }
 }
 @keyframes hornPulsingAnimation{
@@ -755,9 +792,27 @@ body{
     }
 }
 @media only screen and (min-width: 300px) and (max-width: 650px) {
-    .howToPlay {
-        width: 5%;
+    .howToPlay{
+        display:none;
+    }
+    .howToPlayMobile{
+        position: absolute;
+        width: 333px;
+        height: 378px;
+        z-index: 115;
+        left: 50%;
+        top: 3%;
+        -webkit-transform: translate(-50%, 0);
+        transform: translate(-50%, 0);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 4px solid white;
+    }
+    .exitMobileCardInfo{
+        width:15%;
         height:10%;
+        z-index:1;
     }
     .container{
         position:fixed;
